facet-diff/tests/snapshots/diff_snapshots__diff_value_object_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────────╮[0m
[36m│[0m[2m{[0m               [36m│[0m
[36m│[0m  [36mname[0m[2m: [0m[33m"Alice"[0m[2m,[0m[36m│[0m
[36m│[0m  [36mage[0m[2m: [0m[36m30[0m[2m,[0m      [36m│[0m
[36m│[0m[2m}[0m               [36m│[0m
[36m╰────────────────╯[0m
[32m╭After───────────╮[0m
[32m│[0m[2m{[0m               [32m│[0m
[32m│[0m  [36mname[0m[2m: [0m[33m"Alice"[0m[2m,[0m[32m│[0m
[32m│[0m  [36mage[0m[2m: [0m[36m30[0m[2m,[0m      [32m│[0m
[32m│[0m[2m}[0m               [32m│[0m
[32m╰────────────────╯[0m
[33m╔Diff════════════╗[0m
[33m║[0m{               [33m║[0m
[33m║[0m  name: "Alice",[33m║[0m
[33m║[0m  age: 30,      [33m║[0m
[33m║[0m}               [33m║[0m
[33m╚════════════════╝[0m
