facet-diff/tests/snapshots/diff_snapshots__diff_value_object_field_added.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────────╮[0m
[36m│[0m{               [36m│[0m
[36m│[0m  name: "Alice",[36m│[0m
[36m│[0m}               [36m│[0m
[36m╰────────────────╯[0m
[32m╭After───────────╮[0m
[32m│[0m{               [32m│[0m
[32m│[0m  name: "Alice",[32m│[0m
[32m│[0m  age: 30,      [32m│[0m
[32m│[0m}               [32m│[0m
[32m╰────────────────╯[0m
[33m╔Diff════════════╗[0m
[33m║[0m{               [33m║[0m
[33m║[0m  [32m+ age: 30[39m     [33m║[0m
[33m║[0m}               [33m║[0m
[33m╚════════════════╝[0m
