facet-diff/tests/snapshots/diff_snapshots__diff_value_object_field_removed.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: a.diff(&b).to_string()
---
{
  [31m- age: 30[39m
}
