facet-diff/tests/snapshots/diff_snapshots__diff_value_object_vs_struct_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────────────╮
│{                        │
│  name: "Alice",         │
│  age: 30,               │
│}                        │
╰─────────────────────────╯
╭After────────────────────╮
│OwnedUser {              │
│  name: "Bob",           │
│  age: 25,               │
│}                        │
╰─────────────────────────╯
╔Diff═════════════════════╗
║{                        ║
║  age: 30 → 25           ║
║  name: "Alice" → "Bob"  ║
║}                        ║
╚═════════════════════════╝
