facet-diff/tests/snapshots/diff_snapshots__diff_value_object_vs_struct_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before──────────────╮[0m
[38;2;86;95;137m│[0m[2m{[0m                   [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mname[39m[2m: [0m"[38;2;158;206;106mAlice[39m"[2m,[0m    [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mage[39m[2m: [0m[38;2;255;158;100m30[39m[2m,[0m          [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m}[0m                   [38;2;86;95;137m│[0m
[38;2;86;95;137m╰────────────────────╯[0m
[38;2;86;95;137m╭After───────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mOwnedUser[39m[0m[2m {[0m         [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mname[39m[2m: [0m"[38;2;158;206;106mAlice[39m"[2m,[0m    [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mage[39m[2m: [0m[38;2;81;224;193m30[39m[2m,[0m          [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m}[0m                   [38;2;86;95;137m│[0m
[38;2;86;95;137m╰────────────────────╯[0m
[38;2;224;175;104m╔Diff════════════════╗[0m
[38;2;224;175;104m║[0m[38;2;86;95;137m(structurally equal)[39m[38;2;224;175;104m║[0m
[38;2;224;175;104m╚════════════════════╝[0m
