facet-diff/tests/snapshots/diff_snapshots__diff_value_object_vs_value_object_field_type_change.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before─────────────────────╮[0m
[36m│[0m{                          [36m│[0m
[36m│[0m  count: 42,               [36m│[0m
[36m│[0m}                          [36m│[0m
[36m╰───────────────────────────╯[0m
[32m╭After──────────────────────╮[0m
[32m│[0m{                          [32m│[0m
[32m│[0m  count: "forty-two",      [32m│[0m
[32m│[0m}                          [32m│[0m
[32m╰───────────────────────────╯[0m
[33m╔Diff═══════════════════════╗[0m
[33m║[0m{                          [33m║[0m
[33m║[0m  count: [31m42[39m → [32m"forty-two"[39m  [33m║[0m
[33m║[0m}                          [33m║[0m
[33m╚═══════════════════════════╝[0m
