facet-diff/tests/snapshots/diff_snapshots__diff_value_object_vs_value_object_nested_change.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: a.diff(&b).to_string()
---
{
  user: {
    age: [31m30[39m → [32m31[39m
  }
}
