facet-diff/tests/snapshots/diff_snapshots__diff_value_string_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│"hello"     │
╰────────────╯
╭After───────╮
│"hello"     │
╰────────────╯
╔Diff════════╗
║"hello"     ║
╚════════════╝
